[package]
name = "chuoku"
version = "0.1.0"
license = "Apache-2.0"
authors = ["K2Da <id.k2da@gmail.com>"]
edition = "2018"
description = "A lib to store/restore aws cli credential"
readme = "README.md"
homepage = "https://github.com/K2Da/chuoku"
repository = "https://github.com/K2Da/chuoku"
keywords = ["aws"]

[dependencies]
rusoto_core = "0.43.*"
rusoto_ec2 = "0.43.*"
rusoto_credential = "0.43.*"
rusoto_sts = "0.43.*"
tokio = { version = "0.2", features = ["full"] }
rust-ini = "0.15"
dirs = "2.0.*"
async-trait = "0.1.30"
chrono = "0.4.11"
prettytable-rs = "^0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
thiserror = "1.0.15"
envy = "0.4.1"
